# app/controllers/bank_admins/users/transfers_controller.rb
@@ -2,12 +2,12 @@ class BankAdmins::Users::TransfersController < BankAdmins::ApplicationController
   before_action :find_user
 
   def index
-    @transfers = @user.try(:transfers).select(:id, :origin_account, :destination_account, :amount, :transfer_successful, :created_at, :updated_at).where(params[:transfer])
+    @transfers = @user.try(:transfers).select(:id, :origin_account, :destination_account, :amount, :created_at, :updated_at).where(params[:transfer])
     json_response(@transfers, :ok)
   end
 
   def show
-    @transfer = @user.try(:transfers).select(:id, :origin_account, :destination_account, :amount, :transfer_successful, :created_at, :updated_at).find_by(id: params[:id])
+    @transfer = @user.try(:transfers).select(:id, :origin_account, :destination_account, :amount, :created_at, :updated_at).find_by(id: params[:id])
     if @transfer
       status = :ok
     else
